--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,5 +6,5 @@ ProjectVersion=1.0
 CopyrightNotice=Created by Quinton Gordon.
 bUseBorderlessWindow=False
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BF620E614C25DF321D914CAFB147BA52", "Scream Jam 2023")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "4DA8893A4FE04CA5C3AB34804AC3611F", "Scream Jam 2023 - DEBUG")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "4DA8893A4FE04CA5C3AB34804AC3611F", "- DEBUG")
 
