Progress on Village and Sickle Lanterns

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,6 @@ ProjectID=BEFB2F6E4728808AA84D7F9DEACB94C2
 ProjectVersion=1.0
 CopyrightNotice=Created by Quinton Gordon.
 bUseBorderlessWindow=False
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BF620E614C25DF321D914CAFB147BA52", "Scream Jam 2023")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BF620E614C25DF321D914CAFB147BA52", "Lost on Halloween")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "4DA8893A4FE04CA5C3AB34804AC3611F", "- DEBUG")
 
