--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/Sandbox.Sandbox
 EditorStartupMap=/Game/Maps/Sandbox.Sandbox
 GlobalDefaultGameMode=/Game/Blueprints/BP_DefaultGameModeBase.BP_DefaultGameModeBase_C
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
