--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Sandbox.Sandbox
-EditorStartupMap=/Game/Maps/Sandbox.Sandbox
+GameDefaultMap=/Game/Maps/Runtime.Runtime
+EditorStartupMap=/Game/Maps/Runtime.Runtime
 GlobalDefaultGameMode=/Game/Blueprints/BP_DefaultGameModeBase.BP_DefaultGameModeBase_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
