--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,9 @@
 ProjectID=BEFB2F6E4728808AA84D7F9DEACB94C2
 ProjectVersion=1.0
 CopyrightNotice=Created by Quinton Gordon.
-bUseBorderlessWindow=False
+bUseBorderlessWindow=True
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BF620E614C25DF321D914CAFB147BA52", "Lost on Halloween")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "4DA8893A4FE04CA5C3AB34804AC3611F", "- DEBUG")
+Description=Made for Scream Jam 2023
+ProjectName=Lost on Halloween
 
